fixed bump and alignment issue of timer text

--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -2,7 +2,6 @@
   font-size: 100px;
   line-height: 120px;
   font-weight: bold;
-  letter-spacing: -5px;
 }
 
 @mixin heading-2 {
